--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects | Phumza Sotyantya</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f9fafb;
+      color: #1f2937;
+    }
+    header {
+      background-color: #3b82f6;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a.active {
+      text-decoration: underline;
+    }
+    main {
+      padding: 2rem;
+    }
+    h1, h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+    }
+    .card {
+      background-color: white;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .card:hover {
+      transform: translateY(-5px) scale(1.02);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+    .card img {
+      max-width: 100%;
+      border-radius: 0.5rem;
+      margin-bottom: 1rem;
+    }
+    .links a {
+      margin-right: 1rem;
+      color: #3b82f6;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.2s;
+    }
+    .links a:hover {
+      color: #1d4ed8;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #3b82f6;
+      color: white;
+      margin-top: 2rem;
+    }
+    .technical-skills {
+      text-align: center;
+      margin-top: 4rem;
+    }
+    .skills-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+    .skill {
+      background-color: #e5e7eb;
+      padding: 0.5rem 1rem;
+      border-radius: 9999px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>My Projects</h1>
+    <h1>Phumza Sotyantya</h1>
+    <p>Systems Development Graduate | Java | Python | Hugging Face</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -24,29 +114,11 @@
       <img src="assets/sentiment.png" alt="Sentiment Dashboard" />
       <h3>Sentiment Dashboard</h3>
       <p>Real-time sentiment analysis web app using Hugging Face Transformers and Streamlit.</p>
-      <p><strong>Tech:</strong> Python, Streamlit</p>
+      <p><strong>Tech:</strong> Python, Streamlit, Hugging Face</p>
       <div class="links">
         <a href="https://czk4haum5pvgxruigazj7r.streamlit.app/">Live Demo</a>
       </div>
     </div>
-
-    <div class="card">
-      <i class="fas fa-accessible-icon fa-3x"></i>
-      <h3>Accessibility Tool</h3>
-      <p>AI solution designed to improve accessibility.</p>
-      <div class="links">
-        <a href="https://github.com/Lisekho3/ai-accessebility-project-34">GitHub</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <i class="fas fa-balance-scale fa-3x"></i>
-      <h3>COMPAS Bias Audit</h3>
-      <p>Audit of criminal justice AI system COMPAS, exploring fairness and bias.</p>
-    </div>
-
-    <!-- Additional Projects -->
-    <h2>Additional Projects</h2>
 
     <div class="card">
       <img src="assets/flashcard.png" alt="Flashcard App" />
@@ -70,12 +142,44 @@
       </div>
     </div>
 
+    <!-- Other Projects -->
+    <h2>Additional Projects</h2>
+
     <div class="card">
       <i class="fas fa-robot fa-3x"></i>
       <h3>AI Concept Chatbot</h3>
       <p>Conversational chatbot built on Botpress for interactive learning.</p>
     </div>
+
+    <div class="card">
+      <i class="fas fa-accessible-icon fa-3x"></i>
+      <h3>Accessibility Tool</h3>
+      <p>AI solution designed to improve accessibility.</p>
+      <div class="links">
+        <a href="https://github.com/Lisekho3/ai-accessebility-project-34">GitHub</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <i class="fas fa-balance-scale fa-3x"></i>
+      <h3>COMPAS Bias Audit</h3>
+      <p>Audit of criminal justice AI system COMPAS, exploring fairness and bias.</p>
+    </div>
   </main>
+
+  <section class="technical-skills">
+    <h2>Technical Skills & Competencies</h2>
+    <div class="skills-list">
+      <div class="skill">Java</div>
+      <div class="skill">Python</div>
+      <div class="skill">Hugging Face</div>
+      <div class="skill">Streamlit</div>
+      <div class="skill">SQLite</div>
+      <div class="skill">Tailwind CSS</div>
+      <div class="skill">Botpress</div>
+      <div class="skill">AI Systems</div>
+    </div>
+  </section>
 
   <footer>
     © 2025 Phumza Sotyantya
