--- a/about.html
+++ b/about.html
@@ -4,20 +4,41 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About | Phumza Sotyantya</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>About Me</h1>
+    <h1>Phumza Sotyantya</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" >Home</a>
       <a href="about.html" class="active">About</a>
       <a href="projects.html">Projects</a>
     </nav>
   </header>
 
-  <main class="content">
-    <p>I’m a Systems Development graduate from Boston City Campus, with distinctions in Android App Development, Database Programming, and more. Currently working as an IT Support Associate at CAPACITI. Passionate about AI & ML, and skilled in teamwork, mentorship, and problem-solving.</p>
+  <main class="content-container">
+    <section class="intro">
+      <h2>Hello, I'm Phumza Sotyantya</h2>
+      <p>
+        I am a <strong>Systems Development Graduate</strong> passionate about building intelligent and accessible digital solutions.
+      </p>
+    </section>
+
+    <section class="technical-skills">
+      <h3>Technical Skills & Competencies</h3>
+      <ul>
+        <li>Java</li>
+        <li>Python</li>
+        <li>Hugging Face Transformers</li>
+        <li>Streamlit</li>
+        <li>HTML, CSS, JavaScript</li>
+        <li>AI & Machine Learning</li>
+      </ul>
+    </section>
+
+    <section class="download-cv-section">
+      <a href="assets/phumza-cv.pdf" download class="cv-button">Download My CV</a>
+    </section>
   </main>
 
   <footer>
