--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Phumza Sotyantya</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Home | Phumza Sotyantya</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
@@ -16,16 +16,14 @@
     </nav>
   </header>
 
-  <main class="hero">
-    <h2>Hi, I'm Phumza</h2>
-    <p>Systems Development Graduate • AI/ML Enthusiast • Passionate Coder</p>
-    <a href="projects.html" class="btn">View Projects</a>
+  <main class="content-container home-intro">
+    <h2>Welcome to My Portfolio</h2>
+    <p>Hi! I’m Phumza, a Systems Development Graduate focused on building intelligent and accessible digital solutions.</p>
+    <p>Explore my work and projects to learn more.</p>
   </main>
 
   <footer>
-    © 2025 Phumza Sotyantya •  
-    <a href="https://github.com/Melinda-PS">GitHub</a> •
-    <a href="https://linkedin.com/in/phumza-sotyantya-44929427a">LinkedIn</a>
+    © 2025 Phumza Sotyantya
   </footer>
 </body>
 </html>
