--- a/about.html
+++ b/about.html
@@ -8,36 +8,25 @@
 </head>
 <body>
   <header>
-    <h1>Phumza Sotyantya</h1>
+    <h1>About Me</h1>
     <nav>
-      <a href="index.html" >Home</a>
-      <a href="about.html" class="active">About</a>
-      <a href="projects.html">Projects</a>
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About Me</a>
+      <a href="skills.html">Skills</a>
+      <a href="beyond.html">Beyond the Code</a>
+      <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
 
   <main class="content-container">
-    <section class="intro">
-      <h2>Hello, I'm Phumza Sotyantya</h2>
-      <p>
-        I am a <strong>Systems Development Graduate</strong> passionate about building intelligent and accessible digital solutions.
-      </p>
+    <section>
+      <h2>Bio</h2>
+      <p>I am Phumza Sotyantya, a Systems Development Graduate passionate about building intelligent, inclusive, and accessible digital solutions. I thrive in collaborative environments and am driven by curiosity and a desire to use technology for social good.</p>
     </section>
 
-    <section class="technical-skills">
-      <h3>Technical Skills & Competencies</h3>
-      <ul>
-        <li>Java</li>
-        <li>Python</li>
-        <li>Hugging Face Transformers</li>
-        <li>Streamlit</li>
-        <li>HTML, CSS, JavaScript</li>
-        <li>AI & Machine Learning</li>
-      </ul>
-    </section>
-
-    <section class="download-cv-section">
-      <a href="assets/phumza-cv.pdf" download class="cv-button">Download My CV</a>
+    <section>
+      <h2>Career Objectives</h2>
+      <p>My goal is to contribute to innovative projects in the fields of Artificial Intelligence, Machine Learning, and software development while supporting the growth of accessible and ethical digital ecosystems.</p>
     </section>
   </main>
 
