--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <h1>Phumza Sotyantya</h1>
     <nav>
       <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
+      <a href="about.html">About Me</a>
+      <a href="skills.html">Skills</a>
+      <a href="beyond.html">Beyond the Code</a>
+      <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
 
   <main class="content-container home-intro">
     <h2>Welcome to My Portfolio</h2>
     <p>Hi! I’m Phumza, a Systems Development Graduate focused on building intelligent and accessible digital solutions.</p>
-    <p>Explore my work and projects to learn more.</p>
+    <p>Explore my skills, career objectives, projects, and community involvement.</p>
   </main>
 
   <footer>
