--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,11 @@
     <h1>My Projects</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html">About Me</a>
+      <a href="skills.html">Skills</a>
+      <a href="beyond.html">Beyond the Code</a>
       <a href="projects.html" class="active">Projects</a>
+      <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
 
