--- a/beyond.html
+++ b/beyond.html
@@ -21,7 +21,7 @@
   <main class="content-container beyond-code">
     <section>
       <h2>Published Work</h2>
-      <p>Check out my writing on Fundza: <a href="https://live.fundza.mobi/writer-profiles/meet-the-fanz/phumza-melinda/" target="_blank">Fundza Published Work</a></p>
+      <p>Check out my writing on Fundza: <a href="https://live.fundza.mobi/writer-profiles/meet-the-fanz/phumza-melinda/" target="_blank">Open me</a></p>
     </section>
 
     <section>
