--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <header>
-    <h1>My Projects</h1>
+    <h1>Phumza Sotyantya</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
@@ -49,7 +51,7 @@
       </div>
     </div>
 
-    <h2>Other Projects</h2>
+    <h2>More Projects</h2>
 
     <div class="card">
       <h3>AI Concept Chatbot</h3>
@@ -80,4 +82,5 @@
     © 2025 Phumza Sotyantya
   </footer>
 </body>
+
 </html>
