--- a/projects.html
+++ b/projects.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
   <header>
-    <h1>Phumza Sotyantya</h1>
+    <h1>My Projects</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
@@ -37,32 +35,46 @@
     <div class="card">
       <img src="assets/bias-audit.png" alt="COMPAS Bias Audit" />
       <h3>COMPAS Bias Audit</h3>
-      <p>Audit of criminal justice AI system COMPAS, exploring fairness and bias.</p>
-      <p><strong>Tech:</strong> Python, Data Analysis</p>
+      <p>A team project conducted with THE ELEMENTS, auditing the criminal justice AI system COMPAS for bias and fairness using Google Colab.</p>
+      <p><strong>Tech:</strong> Python, Google Colab</p>
+      <div class="links">
+        <a href="https://colab.research.google.com/drive/12kavZcnyFfFzFpaqmHIxGu-XEzRWDc-d?usp=sharing" target="_blank" rel="noopener noreferrer">View Report</a>
+      </div>
     </div>
 
     <div class="card">
       <img src="assets/accessibility-tool.png" alt="Accessibility Tool" />
       <h3>Accessibility Tool</h3>
-      <p>AI solution designed to improve accessibility for users with disabilities.</p>
-      <p><strong>Tech:</strong> AI, JavaScript</p>
+      <p>AI solution designed to improve accessibility for users with disabilities. Developed as a web application with a supporting GitHub repository.</p>
+      <p><strong>Tech:</strong> AI, JavaScript, Vercel Hosting</p>
       <div class="links">
+        <a href="https://ai-accessebility-project-34.vercel.app/" target="_blank" rel="noopener noreferrer">Live App</a>
         <a href="https://github.com/Lisekho3/ai-accessebility-project-34" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <a href="https://youtu.be/57-Mm3HstZc" target="_blank" rel="noopener noreferrer">Demo</a>
       </div>
     </div>
 
-    <h2>More Projects</h2>
+    <div class="card">
+      <h3>Sector-Specific AI Prototype: Education</h3>
+      <p>A collaborative AI prototype focused on the education sector to enhance learning and accessibility. Developed as a team using Python, JavaScript, and HTML.</p>
+      <p><strong>Tech:</strong> Python, JavaScript, HTML</p>
+      <div class="links">
+        <a href="https://youtu.be/57-Mm3HstZc" target="_blank" rel="noopener noreferrer">Demo</a>
+      </div>
+    </div>
+
+    <h2>Other Projects</h2>
 
     <div class="card">
       <h3>AI Concept Chatbot</h3>
-      <p>Conversational chatbot built on Botpress for interactive learning.</p>
+      <p>Conversational chatbot built on Botpress for interactive learning experiences.</p>
     </div>
 
     <div class="card">
       <h3>Flashcard App</h3>
       <p>Android app to create, view, and study flashcards using Java & SQLite.</p>
       <div class="links">
-        <a href="https://youtu.be/IFbqXimVjhA" target="_blank" rel="noopener noreferrer">Demo</a>
+        <a href="https://youtube.com/shorts/IFbqXimVjhA?feature=share" target="_blank" rel="noopener noreferrer">Demo</a>
         <a href="https://github.com/Melinda-PS/FlashcardApp-BostonCity-SummativeProject" target="_blank" rel="noopener noreferrer">GitHub</a>
         <a href="app-debug.apk" download>Download APK</a>
       </div>
@@ -82,5 +94,4 @@
     © 2025 Phumza Sotyantya
   </footer>
 </body>
-
 </html>
