--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a href="about.html">About Me</a>
       <a href="skills.html">Skills</a>
       <a href="beyond.html">Beyond the Code</a>
+      <a href="projects.html">Projects</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
