--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About Me</a>
       <a href="skills.html">Skills</a>
+       <a href="projects.html">Projects</a>
       <a href="beyond.html">Beyond the Code</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
