--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
       <div class="links">
         <a href="https://youtube.com/shorts/IFbqXimVjhA?feature=share" target="_blank" rel="noopener noreferrer">Demo</a>
         <a href="https://github.com/Melinda-PS/FlashcardApp-BostonCity-SummativeProject" target="_blank" rel="noopener noreferrer">GitHub</a>
-        <a href="app-debug.apk" download>Download APK</a>
+      <a href="https://github.com/Melinda-PS/FlashcardApp-BostonCity-SummativeProject/raw/main/app-debug.apk" download>Download APK</a>
       </div>
     </div>
 
