--- a/beyond.html
+++ b/beyond.html
@@ -13,27 +13,56 @@
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
       <a href="skills.html">Skills</a>
-       <a href="projects.html">Projects</a>
       <a href="beyond.html" class="active">Beyond the Code</a>
+      <a href="projects.html">Projects</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
 
-  <main class="content-container beyond-code">
-    <section>
-      <h2>Published Work</h2>
-      <p>Check out my writing on Fundza: <a href="https://live.fundza.mobi/writer-profiles/meet-the-fanz/phumza-melinda/" target="_blank">Open me</a></p>
-    </section>
+  <main class="content-container beyond-grid">
+    <h2>Beyond the Code</h2>
+    <p>Aside from my technical journey, I proudly serve as a Youth Leader at <strong>The Salvation Army - Mdantsane Corps</strong>. I am passionate about empowering young people and making a positive impact in my community.</p>
 
-    <section>
-      <h2>Community Engagement</h2>
-      <p>A youth leader at The Salvation Army Mdantsane Corps.</p>
-    </section>
+    <!-- Youth Leadership Section -->
+    <div class="beyond-card">
+      <img src="assets/youth-leadership-1.jpg" alt="Leading Youth Program" />
+      <h3>Youth Leadership at Mdantsane Corps</h3>
+      <p>Mentoring and guiding youth through community programs that build life skills, confidence, and spiritual growth.</p>
+      <div class="links">
+        <a href="https://www.facebook.com/100066607274501/posts/997186049178295/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+      </div>
+    </div>
 
-    <section>
-      <h2>School Research ()</h2>
-      <p> Explored topics: </p>
-    </section>
+    <!-- Event 2 -->
+    <div class="beyond-card">
+      <img src="assets/youth-leadership-2.jpg" alt="Youth Event 2" />
+      <h3>Youth Engagement Events</h3>
+      <p>Organizing events that inspire and support the growth of the youth at Mdantsane Corps.</p>
+      <div class="links">
+        <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+      </div>
+    </div>
+
+    <!-- Event 3 -->
+    <div class="beyond-card">
+      <img src="assets/youth-leadership-3.jpg" alt="Youth Event 3" />
+      <h3>Community Support Programs</h3>
+      <p>Supporting outreach initiatives that uplift and strengthen the Mdantsane community.</p>
+      <div class="links">
+        <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+      </div>
+    </div>
+
+    <!-- Event 4 -->
+    <div class="beyond-card">
+      <img src="assets/youth-leadership-4.jpg" alt="Youth Event 4" />
+      <h3>Leadership in Action</h3>
+      <p>Guiding and empowering young people to be confident leaders in their communities.</p>
+      <div class="links">
+        <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+      </div>
+    </div>
+
   </main>
 
   <footer>
