--- a/beyond.html
+++ b/beyond.html
@@ -21,43 +21,43 @@
 
   <main class="content-container beyond-grid">
     <h2>Beyond the Code</h2>
-    <p>Aside from my technical journey, I proudly serve as a Youth Leader at <strong>The Salvation Army - Mdantsane Corps</strong>. I am passionate about empowering young people and making a positive impact in my community.</p>
+    <p>Apart from my technical work, I am actively involved in community leadership. I proudly serve as a <strong>Youth Leader at The Salvation Army, Mdantsane Corps</strong>, where I contribute to youth development, community outreach, and church leadership.</p>
 
-    <!-- Youth Leadership Section -->
+    <!-- Local Officers Workshop -->
     <div class="beyond-card">
-      <img src="assets/youth-leadership-1.jpg" alt="Leading Youth Program" />
-      <h3>Youth Leadership at Mdantsane Corps</h3>
-      <p>Mentoring and guiding youth through community programs that build life skills, confidence, and spiritual growth.</p>
+      <img src="assets/officers-workshop.jpg" alt="Local Officers Workshop" />
+      <h3>Attended Local Officers Workshop</h3>
+      <p>Participated in leadership training at the Local Officers Workshop to strengthen my skills and better serve my community and church.</p>
       <div class="links">
         <a href="https://www.facebook.com/100066607274501/posts/997186049178295/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
       </div>
     </div>
 
-    <!-- Event 2 -->
+    <!-- Bible Study Leadership -->
     <div class="beyond-card">
-      <img src="assets/youth-leadership-2.jpg" alt="Youth Event 2" />
-      <h3>Youth Engagement Events</h3>
-      <p>Organizing events that inspire and support the growth of the youth at Mdantsane Corps.</p>
+      <img src="assets/bible-study.jpg" alt="Bible Study" />
+      <h3>Youth Bible Study Leadership</h3>
+      <p>Led Bible study sessions that provided a supportive space for young people to grow in their faith and discuss life challenges.</p>
       <div class="links">
         <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
       </div>
     </div>
 
-    <!-- Event 3 -->
+    <!-- Local Officer Position -->
     <div class="beyond-card">
-      <img src="assets/youth-leadership-3.jpg" alt="Youth Event 3" />
-      <h3>Community Support Programs</h3>
-      <p>Supporting outreach initiatives that uplift and strengthen the Mdantsane community.</p>
+      <img src="assets/local-officer.jpg" alt="Local Officer Appointment" />
+      <h3>Appointed as Local Officer</h3>
+      <p>Honored to be appointed as a Local Officer within The Salvation Army, taking on responsibilities to support and lead the church’s initiatives.</p>
       <div class="links">
         <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
       </div>
     </div>
 
-    <!-- Event 4 -->
+    <!-- Young Women's Community Outreach -->
     <div class="beyond-card">
-      <img src="assets/youth-leadership-4.jpg" alt="Youth Event 4" />
-      <h3>Leadership in Action</h3>
-      <p>Guiding and empowering young people to be confident leaders in their communities.</p>
+      <img src="assets/community-outreach.jpg" alt="Community Outreach" />
+      <h3>Young Women's Community Outreach</h3>
+      <p>Engaged in a young women's outreach program, focusing on giving back to the community and supporting those in need.</p>
       <div class="links">
         <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
       </div>
