--- a/beyond.html
+++ b/beyond.html
@@ -19,50 +19,46 @@
     </nav>
   </header>
 
-  <main class="content-container beyond-grid">
-    <h2>Beyond the Code</h2>
-    <p>Apart from my technical work, I am actively involved in community leadership. I proudly serve as a <strong>Youth Leader at The Salvation Army, Mdantsane Corps</strong>, where I contribute to youth development, community outreach, and church leadership.</p>
+  <main class="content-container">
+    <h2>Life Beyond the Code</h2>
+    <p>In addition to my work in technology, I actively serve as a Youth Leader at <strong>The Salvation Army, Mdantsane Corps</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
 
-    <!-- Local Officers Workshop -->
-    <div class="beyond-card">
-      <img src="assets/officers-workshop.jpg" alt="Local Officers Workshop" />
-      <h3>Attended Local Officers Workshop</h3>
-      <p>Participated in leadership training at the Local Officers Workshop to strengthen my skills and better serve my community and church.</p>
-      <div class="links">
-        <a href="https://www.facebook.com/100066607274501/posts/997186049178295/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+    <div class="projects-grid">
+      <div class="card">
+        <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop" />
+        <h3>Local Officers Workshop</h3>
+        <p>I attended a local officers workshop, gaining leadership and service insights within the church community.</p>
+        <div class="links">
+          <a href="https://www.facebook.com/100066607274501/posts/997186049178295/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="assets/Bible Study Session.jpg" alt="Bible Study Session" />
+        <h3>Bible Study Session</h3>
+        <p>Leading a Bible study session focused on empowering young people through faith and community support.</p>
+        <div class="links">
+          <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="assets/Appointed as LocalOfficer.jpg" alt="Appointed as Local Officer" />
+        <h3>Appointed as Local Officer</h3>
+        <p>I was officially appointed to a local officer position, a leadership role within the church where I support youth development and community initiatives.</p>
+        <div class="links">
+          <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Community Outreach</h3>
+        <p>As part of a young women's group, I led a community outreach initiative to support those in need through acts of kindness and practical assistance.</p>
+        <div class="links">
+          <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+        </div>
       </div>
     </div>
-
-    <!-- Bible Study Leadership -->
-    <div class="beyond-card">
-      <img src="assets/bible-study.jpg" alt="Bible Study" />
-      <h3>Youth Bible Study Leadership</h3>
-      <p>Led Bible study sessions that provided a supportive space for young people to grow in their faith and discuss life challenges.</p>
-      <div class="links">
-        <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
-      </div>
-    </div>
-
-    <!-- Local Officer Position -->
-    <div class="beyond-card">
-      <img src="assets/local-officer.jpg" alt="Local Officer Appointment" />
-      <h3>Appointed as Local Officer</h3>
-      <p>Honored to be appointed as a Local Officer within The Salvation Army, taking on responsibilities to support and lead the church’s initiatives.</p>
-      <div class="links">
-        <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
-      </div>
-    </div>
-
-    <!-- Young Women's Community Outreach -->
-    <div class="beyond-card">
-      <img src="assets/community-outreach.jpg" alt="Community Outreach" />
-      <h3>Young Women's Community Outreach</h3>
-      <p>Engaged in a young women's outreach program, focusing on giving back to the community and supporting those in need.</p>
-      <div class="links">
-        <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
-      </div>
-    </div>
-
   </main>
 
   <footer>
