--- a/beyond.html
+++ b/beyond.html
@@ -25,7 +25,7 @@
 
     <div class="projects-grid">
       <div class="card">
-        <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop" />
+        <img src="assets/LocalOfficers Workshop.jpg" alt="LocalOfficers Workshop" />
         <h3>Local Officers Workshop</h3>
         <p>I attended a local officers workshop, gaining leadership and service insights within the church community.</p>
         <div class="links">
@@ -45,7 +45,7 @@
       <div class="card">
         <img src="assets/Appointed as LocalOfficer.jpg" alt="Appointed as Local Officer" />
         <h3>Appointed as Local Officer</h3>
-        <p>I was officially appointed to a local officer position, a leadership role within the church where I support youth development and community initiatives.</p>
+        <p>I was officially appointed to a local officer position, a leadership role within the church where I support youth.</p>
         <div class="links">
           <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
         </div>
