--- a/beyond.html
+++ b/beyond.html
@@ -53,7 +53,8 @@
 
       <div class="card">
         <h3>Community Outreach</h3>
-        <p>As part of a young women's group, I led a community outreach initiative to support those in need through acts of kindness and practical assistance.</p>
+          <img src="assets/youngWomen f.jpg" alt="Young Women " />
+        <p>As part of a young women's group, was part of community outreach initiative to support those in need through acts of kindness and practical assistance.</p>
         <div class="links">
           <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
         </div>
