--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About | Phumza Sotyantya</title>
+  <title>About Me | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -13,22 +13,28 @@
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About Me</a>
       <a href="skills.html">Skills</a>
-       <a href="projects.html">Projects</a>
       <a href="beyond.html">Beyond the Code</a>
+      <a href="projects.html">Projects</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
 
   <main class="content-container">
-    <section>
-      <h2>Bio</h2>
-      <p>I am Phumza Sotyantya, a Systems Development Graduate passionate about building intelligent, inclusive, and accessible digital solutions. I thrive in collaborative environments and am driven by curiosity and a desire to use technology for social good.</p>
-    </section>
+    <h2>Get to Know Me</h2>
+    <p>I am <strong>Phumza Sotyantya</strong>, a Systems Development graduate with a deep passion for building intelligent, user-focused digital solutions.</p>
 
-    <section>
-      <h2>Career Objectives</h2>
-      <p>My goal is to contribute to innovative projects in the fields of Artificial Intelligence, Machine Learning, and software development while supporting the growth of accessible and ethical digital ecosystems.</p>
-    </section>
+    <p>I specialize in <strong>AI, Machine Learning, and Software Development</strong> and have hands-on experience developing web applications, mobile apps, and AI-powered tools. I enjoy solving real-world problems and creating impactful technology that is both accessible and scalable.</p>
+
+    <p>Key skills I bring to the table include:</p>
+    <ul>
+      <li>Python, Java, JavaScript</li>
+      <li>Web and Mobile App Development</li>
+      <li>AI and Machine Learning Technologies</li>
+      <li>Chatbot Integration</li>
+      <li>Client Support and Collaboration</li>
+    </ul>
+    
+    <p>I am driven by the opportunity to make a positive difference through technology and community engagement.</p>
   </main>
 
   <footer>
