--- a/skills.html
+++ b/skills.html
@@ -1,44 +1,249 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Skills | Phumza Sotyantya</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header>
-    <h1>Technical Skills</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="skills.html" class="active">Skills</a>
-       <a href="projects.html">Projects</a>
-      <a href="beyond.html">Beyond the Code</a>
-      <a href="contact.html">Resume + Contact</a>
-    </nav>
-  </header>
+/* Reset and base */
 
-  <main class="content-container">
-    <section class="technical-skills">
-      <h2>Technical Skills Overview</h2>
-      <ul>
-        <li>Proficient in technical skills</li>
-        <li>Computer skills</li>
-        <li>Interpersonal skills</li>
-        <li>Problem Solving</li>
-        <li>Communication</li>
-        <li>Teamwork</li>
-        <li>Time Management</li>
-        <li>Client Support</li>
-        <li>Language: English</li>
-        <li>Proficient in AI and ML technologies</li>
-      </ul>
-    </section>
-  </main>
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  <footer>
-    © 2025 Phumza Sotyantya
-  </footer>
-</body>
-</html>
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f9fafb;
+  color: #1f2937;
+  line-height: 1.6;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  scroll-behavior: smooth;
+}
+
+header {
+  background-color: #3b82f6;
+  color: white;
+  padding: 1.25rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+header h1 {
+  font-size: 1.75rem;
+  letter-spacing: 0.05em;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-left: 1.5rem;
+  font-weight: 600;
+  font-size: 1rem;
+  position: relative;
+  padding: 0.25rem 0;
+  transition: color 0.3s;
+}
+
+nav a:hover,
+nav a.active {
+  color: #dbeafe;
+}
+
+main.content-container {
+  max-width: 1100px;
+  padding: 2rem 1rem 3rem;
+  margin: 0 auto;
+  flex-grow: 1;
+}
+
+.home-intro {
+  text-align: center;
+  animation: fadeIn 2s ease-in-out;
+}
+
+h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: #111827;
+}
+
+h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0.75rem;
+  color: #2563eb;
+}
+
+p {
+  margin-bottom: 1rem;
+  font-size: 1rem;
+}
+
+ul {
+  list-style-type: disc;
+  margin-left: 1.25rem;
+  margin-bottom: 2rem;
+}
+
+.technical-skills ul {
+  columns: 2;
+  column-gap: 2rem;
+  font-weight: 600;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.75rem;
+  margin-top: 1rem;
+}
+
+.card {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgb(0 0 0 / 0.05);
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0 12px 30px rgb(59 130 246 / 0.4);
+  transform: translateY(-5px);
+}
+
+.card img {
+  width: 100%;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  object-fit: cover;
+  max-height: 160px;
+}
+
+.links {
+  margin-top: auto;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.links a {
+  background-color: #3b82f6;
+  color: white;
+  padding: 0.4rem 0.9rem;
+  border-radius: 9999px;
+  font-weight: 600;
+  font-size: 0.9rem;
+  text-decoration: none;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.links a:hover {
+  background-color: #2563eb;
+  transform: scale(1.05);
+}
+
+/* CTA Buttons */
+.cta-button {
+  background-color: #3b82f6;
+  color: white;
+  padding: 0.85rem 2rem;
+  border-radius: 9999px;
+  font-weight: 700;
+  text-decoration: none;
+  margin: 1rem 0.5rem;
+  transition: transform 0.3s, background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #2563eb;
+  transform: scale(1.05);
+}
+
+/* Skills Section */
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+}
+
+.skill-card {
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgb(0 0 0 / 0.05);
+  padding: 1.5rem;
+  transition: transform 0.3s;
+}
+
+.skill-card:hover {
+  transform: translateY(-5px);
+}
+
+/* Fade-In Animation */
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Download CV Button */
+.download-cv-section {
+  text-align: center;
+  margin: 3rem 0;
+}
+
+.cv-button {
+  display: inline-block;
+  background-color: #3b82f6;
+  color: white;
+  padding: 0.85rem 2rem;
+  border-radius: 9999px;
+  font-weight: 700;
+  font-size: 1.1rem;
+  text-decoration: none;
+  box-shadow: 0 8px 15px rgba(59, 130, 246, 0.3);
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.cv-button:hover {
+  background-color: #2563eb;
+  transform: translateY(-3px) scale(1.05);
+}
+
+/* Footer */
+footer {
+  background-color: #e0e7ff;
+  text-align: center;
+  padding: 1.5rem;
+  font-size: 0.9rem;
+  color: #4b5563;
+  margin-top: auto;
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  nav a {
+    margin-left: 1rem;
+    font-size: 0.9rem;
+  }
+
+  .technical-skills ul {
+    columns: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
