--- a/skills.html
+++ b/skills.html
@@ -50,7 +50,7 @@
         <ul>
           <li>Youth Leadership (Salvation Army)</li>
           <li>Community Engagement</li>
-          <li>Language Proficiency: English</li>
+          <li>Language Proficiency: English , isiXhosa</li>
         </ul>
       </div>
     </div>
