--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Me | Phumza Sotyantya</title>
+  <title>About | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     <h1>About Me</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html" class="active">About Me</a>
+      <a href="about.html" class="active">About</a>
       <a href="skills.html">Skills</a>
       <a href="beyond.html">Beyond the Code</a>
       <a href="projects.html">Projects</a>
@@ -19,22 +19,10 @@
     </nav>
   </header>
 
-  <main class="content-container">
-    <h2>Get to Know Me</h2>
-    <p>I am <strong>Phumza Sotyantya</strong>, a Systems Development graduate with a deep passion for building intelligent, user-focused digital solutions.</p>
-
-    <p>I specialize in <strong>AI, Machine Learning, and Software Development</strong> and have hands-on experience developing web applications, mobile apps, and AI-powered tools. I enjoy solving real-world problems and creating impactful technology that is both accessible and scalable.</p>
-
-    <p>Key skills I bring to the table include:</p>
-    <ul>
-      <li>Python, Java, JavaScript</li>
-      <li>Web and Mobile App Development</li>
-      <li>AI and Machine Learning Technologies</li>
-      <li>Chatbot Integration</li>
-      <li>Client Support and Collaboration</li>
-    </ul>
-    
-    <p>I am driven by the opportunity to make a positive difference through technology and community engagement.</p>
+  <main class="content-container fade-in">
+    <h2>About Me</h2>
+    <p>I am Phumza Sotyantya, a Systems Development Graduate passionate about creating intelligent, accessible, and user-friendly digital solutions. I specialize in Python, AI, machine learning, and developing impactful applications that solve real-world problems.</p>
+    <p>With a strong focus on continuous learning, I am committed to building solutions that are not only functional but also ethical and inclusive. I thrive in collaborative environments and enjoy taking part in projects that empower communities and enhance user experiences.</p>
   </main>
 
   <footer>
