--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
       </div>
 
       <div class="card fade-in">
-        <iframe src="https://www.youtube.com/embed/57-Mm3HstZc" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://youtu.be/HfF3JSBga3k" frameborder="0" allowfullscreen></iframe>
         <h3>Specific Sector AI Prototype</h3>
         <p>Developed an AI prototype focused on the education sector. Team project.</p>
         <p><strong>Tech:</strong> HTML, CSS, JavaScript, Python</p>
