--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         <iframe src="https://www.youtube.com/embed/57-Mm3HstZc" frameborder="0" allowfullscreen></iframe>
         <h3>Accessibility Tool</h3>
         <p>AI solution designed to improve accessibility for users with disabilities.</p>
-        <p><strong>Tech:</strong> AI, JavaScript</p>
+        <p><strong>Tech:</strong> AI,Python</p>
         <div class="links">
           <a href="https://ai-accessebility-project-34.vercel.app/" target="_blank" rel="noopener noreferrer">Live App</a>
           <a href="https://github.com/Lisekho3/ai-accessebility-project-34" target="_blank" rel="noopener noreferrer">GitHub</a>
