--- a/beyond.html
+++ b/beyond.html
@@ -36,9 +36,9 @@
       <div class="card">
         <img src="assets/Bible Study Session.jpg" alt="Bible Study Session" />
         <h3>Bible Study Session</h3>
-        <p>Leading a Bible study session focused on empowering young people through faith and community support.</p>
-        <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+        <p>Leading a session focused on empowering young people through faith and community support.</p>
+        <div class="links"> 
+   <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
         </div>
       </div>
 
@@ -47,7 +47,7 @@
         <h3>Appointed as Local Officer</h3>
         <p>I was officially appointed to a local officer position, a leadership role within the church where I support youth.</p>
         <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
+          <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
         </div>
       </div>
 
