--- a/projects.html
+++ b/projects.html
@@ -63,12 +63,13 @@
         </div>
       </div>
 
-      <div class="card fade-in">
-        <iframe src="https://youtu.be/HfF3JSBga3k" frameborder="0" allowfullscreen></iframe>
-        <h3>Specific Sector AI Prototype</h3>
-        <p>Developed an AI prototype focused on the education sector. Team project.</p>
-        <p><strong>Tech:</strong> HTML, CSS, JavaScript, Python</p>
-      </div>
+   <div class="card fade-in">
+  <iframe src="https://www.youtube.com/embed/HfF3JSBga3k" frameborder="0" allowfullscreen></iframe>
+  <h3>Specific Sector AI Prototype</h3>
+  <p>Developed an AI prototype focused on the education sector. Team project.</p>
+  <p><strong>Tech:</strong> HTML, CSS, JavaScript, Python</p>
+</div>
+
 
       <div class="card fade-in">
         <h3>PS Resume Maker</h3>
