--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,18 @@
   <p><strong>Tech:</strong> HTML, CSS, JavaScript, Python</p>
 </div>
 
+<div class="card fade-in">
+  <iframe src="https://huggingface.co/spaces/leo11000/content" frameborder="0" allowfullscreen></iframe>
+  <h3>Image Content Generator</h3>
+  <p>Developed an AI-powered image content generator using Gradio and Hugging Face Spaces.</p>
+  <p><strong>Tech:</strong> Python, Gradio, Hugging Face</p>
+  <div class="links">
+    <a href="https://huggingface.co/spaces/leo11000/content" target="_blank" rel="noopener noreferrer">Live Demo</a>
+    <a href="https://github.com/leo11000/content" target="_blank" rel="noopener noreferrer">GitHub</a>
+  </div>
+</div>
 
+      
       <div class="card fade-in">
         <h3>PS Resume Maker</h3>
         <p>AI-driven resume builder generating ATS-friendly CVs with smart templates.</p>
