--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,14 @@
     </nav>
   </header>
 
-  <main class="content-container">
-    <section class="download-cv-section">
-      <h2>Download My Resume</h2>
-      <a href="assets/phumza-cv.pdf" download class="cv-button">Download CV</a>
-    </section>
+    <main class="content-container">
+  <section class="download-cv-section">
+    <h2>Download My Resume</h2>
+    <a href="assets/Phumza-S.pdf" class="cv-button" download>
+      Download My CV
+    </a>
+  </section>
+</main>
 
     <section>
       <h2>Contact Information</h2>
