--- a/contact.html
+++ b/contact.html
@@ -19,19 +19,17 @@
     </nav>
   </header>
 
-    <main class="content-container">
-  <section class="download-cv-section">
-    <h2>Download My Resume</h2>
-    <a href="assets/Phumza-S.pdf" class="cv-button" download>
-      Download My CV
-    </a>
-  </section>
-</main>
+  <main class="content-container">
+    <section class="download-cv-section">
+      <h2>Download My Resume</h2>
+      <a href="assets/Phumza-S.pdf" class="cv-button" download>
+        📄 Download My CV
+      </a>
+    </section>
 
-    <section>
+    <section class="contact-info">
       <h2>Contact Information</h2>
-      <p>Email: <a href="phumzamelinda@gmail.com">phumzamelinda@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank">View My LinkedIn</a></p>
+       <p>LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a></p>
     </section>
   </main>
 
