--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
   <main class="content-container">
     <section class="download-cv-section">
       <h2>Download My Resume</h2>
-      <a href="assets/Phumza-S.pdf" class="cv-button" download>
-        📄 Download My CV
-      </a>
+     <a href="assets/Phumza-S.pdf" class="cv-button" download>
+    Download My CV
+  </a>
     </section>
 
     <section class="contact-info">
