--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,10 @@
 
   <main class="content-container">
     <section class="download-cv-section">
-      <h2>Download My Resume</h2>
-     <a href="assets/Phumza-S.pdf" class="cv-button" download>
-    Download My CV
-  </a>
-    </section>
+     <a href="https://melinda-ps.github.io/phumza-portfolio/assets/Phumza-S.pdf" class="cv-button" download>
+  Download My CV
+</a>
+   </section>
 
     <section class="contact-info">
       <h2>Contact Information</h2>
