--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <h2>Get to Know Me</h2>
     <p>I am <strong>Phumza Sotyantya</strong>, a Systems Development graduate with a deep passion for building intelligent, user-focused digital solutions.</p>
 
-    <p>I specialize in <strong>AI, Machine Learning, and Software Development</strong> and have hands-on experience developing web applications, mobile apps, and AI-powered tools. I enjoy solving real-world problems and creating impactful technology that is both accessible and scalable.</p>
+    <p>I specialize in <strong>AI, Machine Learning, and systems development</strong> and have hands-on experience developing web applications, mobile apps, and AI-powered tools. I enjoy solving real-world problems and creating impactful technology that is both accessible and scalable.</p>
 
     <p>Key skills I bring to the table include:</p>
     <ul>
