--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,7 @@
         <p>Android app to create, view, and study flashcards using Java & SQLite.</p>
         <div class="links">
           <a href="https://github.com/Melinda-PS/FlashcardApp-BostonCity-SummativeProject" target="_blank" rel="noopener noreferrer">GitHub</a>
+          **Note:** ⚠️ *Download at your own risk — the app is still being updated and cleaned for improved performance and security.*
           <a href="https://github.com/Melinda-PS/FlashcardApp-BostonCity-SummativeProject/blob/main/app-debug.apk?raw=true" target="_blank" rel="noopener noreferrer">Download APK</a>
         </div>
       </div>
