--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,23 @@
 
   <main class="content-container">
     <section class="download-cv-section">
-     <a href="https://melinda-ps.github.io/phumza-portfolio/assets/Phumza-S.pdf" class="cv-button" download>
-  Download My CV
-</a>
-   </section>
+      <a href="https://melinda-ps.github.io/phumza-portfolio/assets/Melinda.pdf" class="cv-button" download>
+        Download My CV
+      </a>
+    </section>
 
     <section class="contact-info">
       <h2>Contact Information</h2>
-       <p>LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a></p>
+
+      <!-- LinkedIn QR Code -->
+      <div class="linkedin-qr">
+        <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">
+          <img src="assets/linkedin_qr.png" alt="LinkedIn QR Code" class="qr-image">
+        </a>
+      </div>
+
+      <!-- LinkedIn Profile Link -->
+      <p>LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a></p>
     </section>
   </main>
 
