--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
       <a href="projects.html" class="cv-button">View My Work</a>
       <a href="contact.html" class="cv-button">Get in Touch</a>
     </div>
+    <div class="quote-section">
+  <blockquote>
+    “Innovation isn’t about what we can build — it’s about who we build it for.”
+    <span>— Phumza Sotyantya</span>
+  </blockquote>
+</div>
+<section class="quick-highlights">
+  <h3>What I Do</h3>
+  <ul>
+    <li>💡 Design user-friendly and accessible interfaces</li>
+    <li>🌍 Promote inclusive, impactful tech solutions</li>
+    <li>🤝 Collaborate on community tech initiatives</li>
+  </ul>
+</section>
+
   </main>
 
   <footer>
