--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About Me</a>
       <a href="skills.html">Skills</a>
-      <a href="beyond.html">Beyond the Code</a>
       <a href="projects.html">Projects</a>
+      <a href="beyond.html">Beyond the Code</a>
+      <a href="certifications.html">Certifications</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
@@ -48,6 +49,27 @@
         <li>🌍 Promote inclusive, impactful tech solutions</li>
         <li>🤝 Collaborate on community tech initiatives</li>
       </ul>
+    </section>
+
+    <section>
+      <h2>Featured Certifications</h2>
+      <div class="certifications-grid">
+        <div class="cert-card">
+          <p><strong>Microsoft Certified:</strong> Azure Fundamentals</p>
+          <a href="#" target="_blank">View Credential</a>
+        </div>
+        <div class="cert-card">
+          <p><strong>IBM AI Engineering</strong> (Coursera)</p>
+          <a href="#" target="_blank">View Credential</a>
+        </div>
+        <div class="cert-card">
+          <p><strong>Google Data Analytics</strong> (Coursera)</p>
+          <a href="#" target="_blank">View Credential</a>
+        </div>
+      </div>
+      <p style="margin-top:1rem;">
+        <a href="certifications.html" class="cv-button">See All Certifications</a>
+      </p>
     </section>
   </main>
 
