--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About Me</a>
       <a href="skills.html">Skills</a>
-      <a href="beyond.html">Beyond the Code</a>
       <a href="projects.html">Projects</a>
+      <a href="beyond.html">Beyond the Code</a>
+      <a href="certifications.html">Certifications</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
@@ -25,16 +26,21 @@
 
     <p>I specialize in <strong>AI, Machine Learning, and systems development</strong> and have hands-on experience developing web applications, mobile apps, and AI-powered tools. I enjoy solving real-world problems and creating impactful technology that is both accessible and scalable.</p>
 
-    <p>Key skills I bring to the table include:</p>
-    <ul>
-      <li>Python, Java, JavaScript</li>
-      <li>Web and Mobile App Development</li>
-      <li>AI and Machine Learning Technologies</li>
-      <li>Chatbot Integration</li>
-      <li>Client Support and Collaboration</li>
-    </ul>
+    <section class="quick-highlights">
+      <h3>Experience</h3>
+      <ul>
+        <li><strong>Software Development Intern</strong> — Built and tested applications, collaborated on agile teams.</li>
+        <li><strong>Youth Leader, Salvation Army</strong> — Organized youth programs, developed leadership and communication skills.</li>
+      </ul>
+    </section>
 
-    <p>Beyond coding, I actively serve as a <strong>Youth Leader at The Salvation Army, Mdantsane Corps</strong>. This role has helped me develop leadership, communication, and community outreach skills. I lead youth development activities, facilitate Bible study sessions, and contribute to empowering young women in our community.</p>
+    <section class="quick-highlights">
+      <h3>Education</h3>
+      <ul>
+        <li><strong>Diploma in Systems Development</strong> — Boston City Campus</li>
+        <li><strong>Additional Coursework</strong> — AI, Machine Learning, and Cloud certifications (Coursera, Microsoft Learn, IBM)</li>
+      </ul>
+    </section>
 
     <p>I am driven by the opportunity to make a positive difference through technology and community engagement.</p>
   </main>
